# codebase1

JammyGl/: .clang-format  CMakeLists.txt  CMakeSettings.json
JammyGl/shader/: basic0.shader  fragment0.shader  mvp.shader  pentagon.shader  uniforms0.shader
JammyGl/source/: BasicTriangle.cpp  CMakeLists.txt  Pentagon.cpp  Rectangle.cpp  Triangle.cpp  Uniforms.cpp  Uniforms2.cpp  deprecated_utils.cpp  deprecated_utils.h  gl_helper.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
cuda_peng/: 01thread.cu  02kernel.cu  03unified_memory.cu  04array.cu  08thrust.cu  10block_shared_memory.cu  11matrix_transpose.cu  CMakeLists.txt  CudaAllocator.h  build-linux.sh
cuda_peng/hi-perf_cuda/: .ccls  09atomic_ops.cu  CMakeLists.txt
gii/: CMakeLists.txt  exec.sh
gii/impl/: CMakeLists.txt  gii.cpp  gii.h  main.cpp  pch.h  ui.cpp  ui.h
hi-perf_cuda/: 00greet.cu  01thread.cu  02kernel.cu  03unified_memory.cu  04array.cu  05cpp_encapsulation.cu  06functional.cu  07math.cu  08thrust.cu  09atomic_ops.cu  10block_shared_memory.cu  CudaAllocator.h  build-linux.sh
learngl/: .gitignore  CMakeLists.txt  all.sh
learngl/assets/ch2/: cube.inc  cube_pos.inc
learngl/assets/common/: gl_spotlight_smoothness.csv  point_light_attenuation.csv
learngl/glsl/: texture1.fs  triangle.vs  triangle1.vs
learngl/include/: _shader_s.h  shader_m.h
learngl/include/kit/: cam_inst.h  csv_proc.h  exception.h  free_look_camera.h  mesh_proc.h  shader_v1.h  tex_proc.h
learngl/lib/: glad.c
learngl/shaders/ch1/: texture1.vs
learngl/shaders/ch2/: 2-phong.vs  3-material.vs  4-tex.frag  5-caster_paralleling.frag
learngl/shaders/ch3/: pro.frag  pro.vert  pro1.frag
learngl/shaders/kit/: pro.frag  pro.vert
learngl/src/: glcube.cpp  parallelogram.cpp  parallelogram1.cpp  texture.cpp  transforms.cpp  triangle.cpp  triangle1.cpp
learngl/src/1.getting_started/: glcube.cpp  parallelogram.cpp  parallelogram1.cpp  polygon.cpp  texture.cpp  transforms.cpp  triangle.cpp  triangle1.cpp  triangle2.cpp  window.cpp
learngl/src/1.getting_started/assets/: cube.inc
learngl/src/1.getting_started/glsl/: glcube.fs  glcube.vs  polygon.fs  polygon.vs  texture.fs  texture.vs  triangle1.fs
learngl/src/2.lighting/: 1-color.cpp  2-phong.cpp  3-materials.cpp  4-tex.cpp  5-caster.cpp  color.cpp  gencubes.cpp  phong.cpp
learngl/src/2.lighting/assets/: cube_norm_tex.inc  cube_normal.inc  cube_pos.inc  gl_spotlight_smoothness.csv  phong_material_samples.csv  phong_materil_samples.csv  point_light_attenuation.csv
learngl/src/2.lighting/glsl/: 1-cube.fs  1-cube.vs  3-material.fs  4-tex.vert  5-caster.frag  5-caster_point.frag  5-caster_spot.frag  cube.fs  phong.fs
learngl/src/ch1/: glcube.cpp  parallelogram.cpp  parallelogram1.cpp  polygon.cpp  texture.cpp  transforms.cpp  triangle.cpp  triangle1.cpp  triangle2.cpp
learngl/src/ch2/: 1-color.cpp  2-phong.cpp  3-materials.cpp  4-tex.cpp  5-caster.cpp
learngl/src/ch3/: manage_asset.cpp  manage_asset_nvpro.cpp
learngl/src/kit/: csv_proc.cpp  gencubes.cpp  mesh_proc.cpp
learngl/src_bin/: csv_proc.cpp  csv_proc.h
meex/: .gitignore  CMakeLists.txt  all.sh
meex/dependencies/: CMakeLists.txt
meex/dependencies/glm/glm/detail/: func_packing_simd.inl
meex/dependencies/glm/glm/gtc/: packing.inl
meex/shaders/: tri_mesh.vert  triangle.frag  triangle.vert
meex/src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_pipeline.h  vk_scene.cpp  vk_scene.h  vk_types.h
